lib/command.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$FAILED,
        peg$c1 = null,
        peg$c2 = function(e) { return e;},
        peg$c3 = "setup",
        peg$c4 = { type: "literal", value: "setup", description: "\"setup\"" },
        peg$c5 = function(name, type, options) {
          return {command: 'setup', args: [ name, type, options] }; 
        },
        peg$c6 = "use",
        peg$c7 = { type: "literal", value: "use", description: "\"use\"" },
        peg$c8 = function(name) { return { command: 'use', args: [ name ]}; },
        peg$c9 = "show",
        peg$c10 = { type: "literal", value: "show", description: "\"show\"" },
        peg$c11 = "columns",
        peg$c12 = { type: "literal", value: "columns", description: "\"columns\"" },
        peg$c13 = "of",
        peg$c14 = { type: "literal", value: "of", description: "\"of\"" },
        peg$c15 = function(name) { return {command: 'show', args: ['columns', name]}; },
        peg$c16 = function(name) { return {command: 'show', args: [ name ]}; },
        peg$c17 = "load",
        peg$c18 = { type: "literal", value: "load", description: "\"load\"" },
        peg$c19 = function(filePath) { return {command: 'load', args: [ filePath ]}; },
        peg$c20 = "true",
        peg$c21 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c22 = function() { return true; },
        peg$c23 = "false",
        peg$c24 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c25 = function() { return false; },
        peg$c26 = "null",
        peg$c27 = { type: "literal", value: "null", description: "\"null\"" },
        peg$c28 = function() { return null; },
        peg$c29 = "{",
        peg$c30 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c31 = [],
        peg$c32 = "}",
        peg$c33 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c34 = function(keyVals) { return makeObjectAST(keyVals); },
        peg$c35 = ":",
        peg$c36 = { type: "literal", value: ":", description: "\":\"" },
        peg$c37 = function(key, val) { return [ key, val ]; },
        peg$c38 = ",",
        peg$c39 = { type: "literal", value: ",", description: "\",\"" },
        peg$c40 = function() { return ',' },
        peg$c41 = function(s) { return s; },
        peg$c42 = function(c1, rest) { return makeSymbolAST(c1, rest); },
        peg$c43 = /^[^0-9(); "',`{}.,:[\]]/,
        peg$c44 = { type: "class", value: "[^0-9(); \"',`{}.,:[\\]]", description: "[^0-9(); \"',`{}.,:[\\]]" },
        peg$c45 = /^[^(); "',`{}.,:[\]]/,
        peg$c46 = { type: "class", value: "[^(); \"',`{}.,:[\\]]", description: "[^(); \"',`{}.,:[\\]]" },
        peg$c47 = ";",
        peg$c48 = { type: "literal", value: ";", description: "\";\"" },
        peg$c49 = "\"",
        peg$c50 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c51 = function(chars) { return makeStringAST(chars); },
        peg$c52 = "'",
        peg$c53 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c54 = /^[^"'\\\0-\x1F]/,
        peg$c55 = { type: "class", value: "[^\"'\\\\\\0-\\x1F]", description: "[^\"'\\\\\\0-\\x1F]" },
        peg$c56 = "\\\"",
        peg$c57 = { type: "literal", value: "\\\"", description: "\"\\\\\\\"\"" },
        peg$c58 = function() { return '"';  },
        peg$c59 = "\\'",
        peg$c60 = { type: "literal", value: "\\'", description: "\"\\\\'\"" },
        peg$c61 = function() { return "'"; },
        peg$c62 = "\\\\",
        peg$c63 = { type: "literal", value: "\\\\", description: "\"\\\\\\\\\"" },
        peg$c64 = function() { return "\\"; },
        peg$c65 = "\\/",
        peg$c66 = { type: "literal", value: "\\/", description: "\"\\\\/\"" },
        peg$c67 = function() { return "/";  },
        peg$c68 = "\\b",
        peg$c69 = { type: "literal", value: "\\b", description: "\"\\\\b\"" },
        peg$c70 = function() { return "\b"; },
        peg$c71 = "\\f",
        peg$c72 = { type: "literal", value: "\\f", description: "\"\\\\f\"" },
        peg$c73 = function() { return "\f"; },
        peg$c74 = "\\n",
        peg$c75 = { type: "literal", value: "\\n", description: "\"\\\\n\"" },
        peg$c76 = function() { return "\n"; },
        peg$c77 = "\\r",
        peg$c78 = { type: "literal", value: "\\r", description: "\"\\\\r\"" },
        peg$c79 = function() { return "\r"; },
        peg$c80 = "\\t",
        peg$c81 = { type: "literal", value: "\\t", description: "\"\\\\t\"" },
        peg$c82 = function() { return "\t"; },
        peg$c83 = "\\u",
        peg$c84 = { type: "literal", value: "\\u", description: "\"\\\\u\"" },
        peg$c85 = function(digits) {
              return String.fromCharCode(parseInt("0x" + digits));
            },
        peg$c86 = function(h1, h2, h3, h4) { return h1+h2+h3+h4; },
        peg$c87 = function(int, frac, exp) { 
            return makeNumberAST(int, frac, exp);
          },
        peg$c88 = function(int, frac) { 
            return makeNumberAST(int, frac, '');
          },
        peg$c89 = "-",
        peg$c90 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c91 = function(frac) { 
            return makeNumberAST('-', frac, '');
          },
        peg$c92 = function(frac) { 
            return makeNumberAST('', frac, '');
          },
        peg$c93 = function(int, exp) { 
            return makeNumberAST(int, '', exp);
          },
        peg$c94 = function(int) { 
            return makeNumberAST(int, '', '');
          },
        peg$c95 = function(digits) { return digits.join(''); },
        peg$c96 = function(digits) { return ['-'].concat(digits).join(''); },
        peg$c97 = ".",
        peg$c98 = { type: "literal", value: ".", description: "\".\"" },
        peg$c99 = function(digits) { return ['.'].concat(digits).join(''); },
        peg$c100 = function(digits) { return ['e'].concat(digits).join(''); },
        peg$c101 = /^[eE]/,
        peg$c102 = { type: "class", value: "[eE]", description: "[eE]" },
        peg$c103 = /^[+\-]/,
        peg$c104 = { type: "class", value: "[+\\-]", description: "[+\\-]" },
        peg$c105 = /^[0-9]/,
        peg$c106 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c107 = /^[1-9]/,
        peg$c108 = { type: "class", value: "[1-9]", description: "[1-9]" },
        peg$c109 = /^[0-9a-fA-F]/,
        peg$c110 = { type: "class", value: "[0-9a-fA-F]", description: "[0-9a-fA-F]" },
        peg$c111 = { type: "other", description: "whitespace" },
        peg$c112 = /^[ \t\n\r]/,
        peg$c113 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },
        peg$c114 = /^[\n\r\u2028\u2029]/,
        peg$c115 = { type: "class", value: "[\\n\\r\\u2028\\u2029]", description: "[\\n\\r\\u2028\\u2029]" },
        peg$c116 = { type: "other", description: "end of line" },
        peg$c117 = "\r\n",
        peg$c118 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c119 = "\n",
        peg$c120 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c121 = "\r",
        peg$c122 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c123 = "\u2028",
        peg$c124 = { type: "literal", value: "\u2028", description: "\"\\u2028\"" },
        peg$c125 = "\u2029",
        peg$c126 = { type: "literal", value: "\u2029", description: "\"\\u2029\"" },
        peg$c127 = { type: "any", description: "any character" },
        peg$c128 = "//",
        peg$c129 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c130 = void 0,
        peg$c131 = function(chars) { 
            return {comment: chars.join('')}; 
          },
        peg$c132 = "/*",
        peg$c133 = { type: "literal", value: "/*", description: "\"/*\"" },
        peg$c134 = "*/",
        peg$c135 = { type: "literal", value: "*/", description: "\"*/\"" },
        peg$c136 = function(chars) { return {comment: chars.join('')}; },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseCommand();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsequeryTerm();
          if (s3 === peg$FAILED) {
            s3 = peg$c1;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c2(s2);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseCommand() {
      var s0;

      s0 = peg$parseSetupCmd();
      if (s0 === peg$FAILED) {
        s0 = peg$parseUseCmd();
        if (s0 === peg$FAILED) {
          s0 = peg$parseShowCmd();
          if (s0 === peg$FAILED) {
            s0 = peg$parseLoadCmd();
          }
        }
      }

      return s0;
    }

    function peg$parseSetupCmd() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 5) === peg$c3) {
        s1 = peg$c3;
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseSymbolExp();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseStringExp();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseObjectExp();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parse_();
                    if (s8 !== peg$FAILED) {
                      peg$reportedPos = s0;
                      s1 = peg$c5(s3, s5, s7);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c0;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseUseCmd() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c6) {
        s1 = peg$c6;
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseSymbolExp();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c8(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseShowCmd() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c9) {
        s1 = peg$c9;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 7) === peg$c11) {
            s3 = peg$c11;
            peg$currPos += 7;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c12); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.substr(peg$currPos, 2) === peg$c13) {
                s5 = peg$c13;
                peg$currPos += 2;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c14); }
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseSymbolExp();
                  if (s7 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c15(s7);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 4) === peg$c9) {
          s1 = peg$c9;
          peg$currPos += 4;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseSymbolExp();
            if (s3 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c16(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      }

      return s0;
    }

    function peg$parseLoadCmd() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c17) {
        s1 = peg$c17;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c18); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseStringExp();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c19(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseExpression() {
      var s0;

      s0 = peg$parseObjectExp();
      if (s0 === peg$FAILED) {
        s0 = peg$parseBoolExp();
        if (s0 === peg$FAILED) {
          s0 = peg$parseStringExp();
          if (s0 === peg$FAILED) {
            s0 = peg$parseNumberExp();
            if (s0 === peg$FAILED) {
              s0 = peg$parseNullExp();
            }
          }
        }
      }

      return s0;
    }

    function peg$parseBoolExp() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c20) {
        s1 = peg$c20;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c22();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 5) === peg$c23) {
          s1 = peg$c23;
          peg$currPos += 5;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c24); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c25();
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      }

      return s0;
    }

    function peg$parseNullExp() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c26) {
        s1 = peg$c26;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c27); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c28();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseObjectExp() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 123) {
        s1 = peg$c29;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c30); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsekeyValExp();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsekeyValExp();
        }
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 125) {
            s3 = peg$c32;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c33); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c34(s2);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsekeyValExp() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parsekeyExp();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 58) {
            s3 = peg$c35;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c36); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseExpression();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parsekeyValDelim();
                  if (s7 === peg$FAILED) {
                    s7 = peg$c1;
                  }
                  if (s7 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c37(s1, s5);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsekeyValDelim() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 44) {
        s1 = peg$c38;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c39); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c40();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsekeyExp() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseSymbolExp();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c41(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseStringExp();
        if (s1 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c41(s1);
        }
        s0 = s1;
      }

      return s0;
    }

    function peg$parseSymbolExp() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parsesymbol1stChar();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsesymbolRestChar();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsesymbolRestChar();
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c42(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsesymbol1stChar() {
      var s0;

      if (peg$c43.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c44); }
      }

      return s0;
    }

    function peg$parsesymbolRestChar() {
      var s0;

      if (peg$c45.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c46); }
      }

      return s0;
    }

    function peg$parsequeryTerm() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 59) {
        s0 = peg$c47;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c48); }
      }

      return s0;
    }

    function peg$parseStringExp() {
      var s0, s1, s2, s3, s4;
